--- a/frontend/src/assets/styles/pages.scss
+++ b/frontend/src/assets/styles/pages.scss
@@ -60,6 +60,12 @@
     color: red;
   }
 
+  &__email {
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: bold;
+  }
+
   &__buttons {
     display: flex;
     flex-direction: column;
