--- a/frontend/src/assets/styles/pages/account.scss
+++ b/frontend/src/assets/styles/pages/account.scss
@@ -16,6 +16,7 @@
     margin-top: 95px;
     width: 100%;
     max-width: 100%;
+    height: max-content;
 
     >* {
       max-width: 100%;
@@ -35,6 +36,21 @@
   }
 }
 
+.anonym-block {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  font-size: 1.1rem;
+  margin-left: 5px;
+  margin-bottom: 10px;
+
+  input {
+    width: 1.1rem;
+    height: 1.1rem;
+    background-color: $light-color;
+  }
+}
+
 // Страница профиля пациента
 .patient-page {
   display: grid;
@@ -47,7 +63,7 @@
 .admin-page {
   &__title {
     margin-top: 20px;
-  } 
+  }
 
   &__message {
     text-align: center;
@@ -110,32 +126,44 @@
 
 // Анимации
 @keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes slideIn {
-  from { 
+  from {
     opacity: 0;
     transform: translateY(-50px);
   }
-  to { 
+
+  to {
     opacity: 1;
     transform: translateY(0);
   }
 }
 
 @keyframes fadeOut {
-  from { opacity: 1; }
-  to { opacity: 0; }
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
 }
 
 @keyframes slideOut {
-  from { 
+  from {
     opacity: 1;
     transform: translateY(0);
   }
-  to { 
+
+  to {
     opacity: 0;
     transform: translateY(50px);
   }
@@ -153,7 +181,7 @@
   justify-content: center;
   z-index: 1000;
   animation: fadeIn 0.3s ease-out forwards;
-  
+
   &-dialog {
     height: 100vh;
     overflow: hidden;
@@ -162,7 +190,7 @@
     align-items: center;
     width: 100%;
   }
-  
+
   &-content {
     background: $primary-color;
     padding: 20px;
@@ -170,7 +198,7 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     animation: slideIn 0.3s ease-out forwards;
     width: 50%;
-    
+
     &.closing {
       animation: slideOut 0.3s ease-in forwards;
     }
@@ -182,28 +210,28 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
     h5 {
       margin: 0;
       font-size: 1.6rem;
     }
-    
+
     button {
       background: none;
       border: none;
       font-size: 2rem;
       cursor: pointer;
       color: red;
-      
+
       &:hover {
         color: rgb(184, 18, 18);
       }
     }
   }
-  
+
   &-body {
     padding: 10px;
-    
+
     textarea {
       padding: 10px;
       width: 100%;
@@ -213,29 +241,20 @@
       resize: vertical;
       min-height: 120px;
       font-size: 1.4rem;
-      
+
       &:focus {
         outline: none;
         box-shadow: 0 0 0 6px $shadow-color;
       }
     }
   }
-  
+
   &-footer {
     padding: 15px 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
-  }
-}
-
-// Анимация удаления строки таблицы
-.table-row {
-  transition: all 0.3s ease-out;
-  
-  &.removing {
-    animation: fadeOut 0.3s ease-out forwards, slideOut 0.3s ease-out forwards;
   }
 }
 
@@ -247,39 +266,39 @@
   cursor: pointer;
   transition: all 0.2s ease;
   border: none;
-  
+
   &-success {
     background-color: #28a745;
     margin-bottom: 10px;
     color: white;
-    
+
     &:hover {
       background-color: #218838;
     }
   }
-  
+
   &-danger {
     background-color: #dc3545;
     color: white;
-    
+
     &:hover {
       background-color: #c82333;
     }
   }
-  
+
   &-secondary {
     background-color: rgb(169, 15, 15);
     color: white;
-    
+
     &:hover {
       background-color: rgb(124, 11, 11);
     }
   }
-  
+
   &-primary {
     background-color: $button-color;
     color: white;
-    
+
     &:hover {
       background-color: $button-color-hover;
     }
@@ -291,13 +310,13 @@
   padding: 10px 15px;
   border-radius: 4px;
   margin-bottom: 20px;
-  
+
   &-success {
     background-color: #d4edda;
     color: #155724;
     border: 1px solid #c3e6cb;
   }
-  
+
   &-danger {
     background-color: #f8d7da;
     color: #721c24;
