--- a/frontend/src/features/account/EditPatientForm/EditPatientForm.scss
+++ b/frontend/src/features/account/EditPatientForm/EditPatientForm.scss
@@ -90,7 +90,7 @@
       color: white;
 
       &:hover {
-        background-color: darken(#27ae60, 10%);
+        background-color: #174329;
       }
     }
 
@@ -99,7 +99,7 @@
       color: white;
 
       &:hover {
-        background-color: darken(#e74c3c, 10%);
+        background-color: #ad3a2d;
       }
     }
   }
