--- a/frontend/src/assets/styles/pages.scss
+++ b/frontend/src/assets/styles/pages.scss
@@ -3,6 +3,14 @@
 @use "./pages/home.scss";
 @use "./pages/auth.scss";
 
+.profile {
+  background-color: $profile-color;
+  padding: 3rem;
+  border-radius: 8px;
+  margin: 0 auto;
+  width: 90%;
+  box-sizing: border-box;
+}
 
 .color-block {
   display: flex;
