--- a/frontend/src/features/account/MyProfile/MyProfile.scss
+++ b/frontend/src/features/account/MyProfile/MyProfile.scss
@@ -104,13 +104,13 @@
     margin-bottom: 20px;
   }
 
-  &__warn {
+  &__warn-block,
+  &__error-block {
     display: inline-block;
     line-height: 1.5;
     background-color: $light-color;
     padding: 5px 10px;
     border-radius: 10px;
-    border-left: solid 5px red;
     margin-top: 15px;
     width: 100%;
     box-sizing: border-box;
@@ -125,18 +125,14 @@
     a {
       word-break: break-word;
     }
+  }
 
-    @media (max-width: 600px) {
-      padding: 8px 12px;
-      border-left-width: 4px;
-      margin-top: 10px;
-    }
+  &__warn-block {
+    border-left: solid 5px rgb(255, 145, 0);
+  }
 
-    @media (max-width: 400px) {
-      border-radius: 8px;
-      padding: 6px 10px;
-      border-left-width: 3px;
-    }
+  &__error-block {
+    border-left: solid 5px red;
   }
 
   &__buttons {
