--- a/frontend/src/assets/styles/variables.scss
+++ b/frontend/src/assets/styles/variables.scss
@@ -26,5 +26,8 @@ $text-color: rgb(34, 35, 64);
 $profile-color: rgb(208, 238, 245);
 $sidebar-color: rgb(242, 242, 250);
 
+$red-color: rgb(186, 16, 16);
+$red-color-hover: rgb(156, 14, 14);
+
 
 $title-size: 3rem;
