--- a/frontend/src/components/UI/SideBar/SideBar.scss
+++ b/frontend/src/components/UI/SideBar/SideBar.scss
@@ -3,7 +3,7 @@
 .sidebar {
   box-sizing: border-box;
   margin: 0 1rem;
-  padding: 10px 50px 0 10px;
+  padding: 10px 0 10px;
 
   &__logo {
     padding: 1rem 0;
