--- a/frontend/src/assets/styles/pages/account.scss
+++ b/frontend/src/assets/styles/pages/account.scss
@@ -389,8 +389,8 @@
     margin-bottom: 1.5rem;
     gap: 20px;
 
-    .celendary,
-    .time {
+    .celendar-block,
+    .time-block {
       min-height: 400px;
       width: 100%;
       background-color: white;
@@ -398,15 +398,38 @@
       padding: 1rem 2rem;
       box-sizing: border-box;
     }
-  }
 
-  &__problems {
-    width: 100%;
-    box-sizing: border-box;
-    background-color: #D1F2EA;
-    border: none;
-    border-radius: 10px;
-    padding: 0.5rem 1rem;
+    // Настройка календаря
+    /* Увеличиваем весь календарь */
+    .large-datepicker .react-datepicker {
+      font-size: 16px;
+      transform: scale(1.3);
+      transform-origin: top left;
+
+      &__month-container {
+        width: 100%;
+      }
+
+      &__day {
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
+        font-size: 1.2rem;
+      }
+
+      &__current-month {
+        font-size: 1.4rem;
+      }
+
+      &__day-names {
+        margin-left: 6px;
+      }
+
+      &__day-name {
+        width: 50px;
+        font-size: 1.2rem;
+      }
+    }
   }
 
   &__button {
@@ -511,6 +534,7 @@
     }
   }
 }
+
 .icons {
   display: flex;
   gap: 30px;
