--- a/frontend/src/components/UI/MyInput/MyInput.scss
+++ b/frontend/src/components/UI/MyInput/MyInput.scss
@@ -22,24 +22,24 @@
 
   &__input-group {
     position: relative;
-  }
 
-  &__input-group label {
-    position: absolute;
-    left: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #999;
-    font-size: 16px;
-    transition: all 0.3s;
-    pointer-events: none;
-  }
+    label {
+      position: absolute;
+      left: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #999;
+      font-size: 16px;
+      transition: all 0.3s;
+      pointer-events: none;
+    }
 
-  &__input-group input:focus+label,
-  &__input-group input:not(:placeholder-shown)+label {
-    top: 0;
-    transform: translateY(-50%);
-    font-size: 12px;
-    color: #4285f4;
+    input:focus+label,
+    input:not(:placeholder-shown)+label {
+      top: 0;
+      transform: translateY(-50%);
+      font-size: 12px;
+      color: #4285f4;
+    }
   }
 }
