--- a/frontend/src/features/account/MyProfile/MyProfile.scss
+++ b/frontend/src/features/account/MyProfile/MyProfile.scss
@@ -33,10 +33,17 @@
     color: red;
   }
 
+  &__title {
+    font-size: 1.8rem;
+    font-weight: bolder;
+    margin-bottom: 2rem;
+  }
+
   &__role {
     margin: 0;
     font-size: 1.3rem;
     color: $doctor-color;
+    margin: 0.4rem 0;
   }
 
   &__content {
@@ -102,6 +109,12 @@
     gap: 15px;
     margin-top: 40px;
     margin-bottom: 20px;
+  }
+
+  &__warns {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   &__warn-block,
@@ -223,4 +236,3 @@
     }
   }
 }
-
