--- a/frontend/src/features/account/MyProfile/MyProfile.scss
+++ b/frontend/src/features/account/MyProfile/MyProfile.scss
@@ -16,36 +16,6 @@
     gap: 5px;
   }
 
-  &__message,
-  &__error {
-    text-align: center;
-    font-size: 1rem;
-    font-weight: bold;
-    transition: all 0.5s ease;
-    margin: 0;
-  }
-
-  &__message {
-    color: $secondary-color;
-  }
-
-  &__error {
-    color: red;
-  }
-
-  &__title {
-    font-size: 1.8rem;
-    font-weight: bolder;
-    margin-bottom: 2rem;
-  }
-
-  &__role {
-    margin: 0;
-    font-size: 1.3rem;
-    color: $doctor-color;
-    margin: 0.4rem 0;
-  }
-
   &__content {
     display: grid;
     grid-template-columns: 1.5fr 2fr;
@@ -55,60 +25,26 @@
     color: $text-color;
   }
 
-  &__avatar-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-  }
+  // &__message,
+  // &__error {
+  //   text-align: center;
+  //   font-size: 1rem;
+  //   font-weight: bold;
+  //   transition: all 0.5s ease;
+  //   margin: 0;
+  // }
 
-  &__avatar {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    margin-top: 20px;
-    overflow: hidden;
+  // &__message {
+  //   color: $secondary-color;
+  // }
 
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      pointer-events: none;
-    }
-  }
-
-  &__links {
-    text-align: center;
-    color: $primary-color;
-    margin-top: 10px;
-
-    p {
-      margin: 5px 0;
-
-      &:hover {
-        color: $button-color-hover;
-        cursor: pointer;
-      }
-    }
-  }
+  // &__error {
+  //   color: red;
+  // }
 
   &__info {
     display: flex;
     flex-direction: column;
-  }
-
-  &__fio {
-    font-size: 1.6rem;
-    font-weight: bolder;
-    text-align: left;
-  }
-
-  &__main-info {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    margin-top: 40px;
-    margin-bottom: 20px;
   }
 
   &__warns {
@@ -152,46 +88,6 @@
     display: flex;
     flex-direction: column;
     margin-top: 10px;
-  }
-}
-
-.form-group {
-  margin: 5px 0;
-
-  input {
-    width: 100%;
-    padding: 8px 10px;
-    margin: 3px 0;
-    border-radius: 8px;
-    background-color: $sidebar-color;
-    font-size: 1.1rem;
-
-    &:focus {
-      outline: none;
-    }
-
-    &:hover {
-      background-color: $light-color;
-    }
-
-    &:read-only:hover {
-      background-color: $sidebar-color;
-      cursor: no-drop;
-    }
-  }
-}
-
-.auth__radio-btn {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-
-  input {
-    width: auto;
-  }
-
-  label {
-    font-size: 1.15rem;
   }
 }
 
