--- a/frontend/src/features/account/ProfileEditForm/ProfileEditForm.scss
+++ b/frontend/src/features/account/ProfileEditForm/ProfileEditForm.scss
@@ -1,7 +1,19 @@
 @use '../../../assets/styles/variables.scss' as *;
 
 .edit-form {
-    &__anonym {}
+    &__anonym {
+        margin-bottom: 1rem;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-size: 1.3rem;
+        font-weight: bold;
+
+        input {
+            width: 18px;
+            height: 18px;
+        }
+    }
 
     &__group {
         margin: 5px 0;
@@ -11,6 +23,7 @@
             padding: 8px 10px;
             margin: 3px 0;
             border-radius: 8px;
+            border: none;
             background-color: $sidebar-color;
             font-size: 1.1rem;
 
