--- a/frontend/src/features/home/Header/Header.scss
+++ b/frontend/src/features/home/Header/Header.scss
@@ -54,6 +54,10 @@
     }
 
     &__avatar {
+        a {
+            display: block;
+        }
+
         img {
             width: 50px;
             height: 50px;
