--- a/frontend/src/features/home/Costs/Costs.scss
+++ b/frontend/src/features/home/Costs/Costs.scss
@@ -6,23 +6,22 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 2rem 0;
 
     &__title {
         text-align: center;
         font-weight: bold;
         color: black;
-        margin: 50px 0;
+        margin: 0.5rem 0;
         font-size: $title-size;
     }
 
     &__block {
         background-color: $block-color;
-        padding: 1rem 4rem;
-        gap: 10px;
-        max-width: 400px;
-        margin: 20px 0;
-        border: none;
-        border-radius: 20px;
+        padding: 2rem 4rem;
+        margin: 0.4rem 0;
+        width: 400px;
+        border-radius: 15px;
 
         &__title {
             color: $primary-color;
@@ -35,6 +34,7 @@
             text-align: center;
             line-height: 1.5;
             font-size: 1.5rem;
+            margin: 0;
         }
     }
 }
