--- a/frontend/src/features/home/Informations/Informations.scss
+++ b/frontend/src/features/home/Informations/Informations.scss
@@ -20,7 +20,7 @@
         width: 90%;
         border: none;
         border-radius: 20px;
-        padding: 20px;
+        padding: 1.5rem 4rem;
         box-sizing: border-box;
 
         &__title {
