--- a/frontend/src/features/home/Solutions/Solutions.scss
+++ b/frontend/src/features/home/Solutions/Solutions.scss
@@ -45,14 +45,14 @@
     }
   }
 
-  &__warm {
+  &__warn {
     padding: 1rem;
-    background-color: #f8f8f8;
-    border-left: 4px solid #ff6b6b;
+    background-color: $light-color;
+    border-left: 4px solid $primary-color;
     border-radius: 4px;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     line-height: 1.6;
-    color: #555;
+    color: $gray-color;
 
     span {
       display: block;
