--- a/frontend/src/components/UI/MyInput/MyInput.scss
+++ b/frontend/src/components/UI/MyInput/MyInput.scss
@@ -55,6 +55,14 @@
     &:focus {
       outline: none;
     }
+
+    &.valid {
+      color: green;
+    }
+
+    &.invalid {
+      color: red;
+    }
   }
 
   &__input-group {
