--- a/frontend/src/assets/styles/pages/account.scss
+++ b/frontend/src/assets/styles/pages/account.scss
@@ -57,21 +57,6 @@
   display: grid;
   grid-template-columns: 0.8fr 2.2fr;
   margin-right: 110px;
-
-  .image-preview {
-    position: fixed;
-    z-index: 1000;
-    background-color: white;
-    padding: 5px;
-    border: 1px solid $light-color;
-    border-radius: 5px;
-    box-shadow: 0 0 10px $shadow-color;
-
-    img {
-      max-width: 200px;
-      max-height: 200px;
-    }
-  }
 }
 
 
@@ -142,6 +127,21 @@
         background-color: rgb(255, 7, 7);
         cursor: pointer;
       }
+    }
+  }
+
+  .image-preview {
+    position: fixed;
+    z-index: 1000;
+    background-color: white;
+    padding: 5px;
+    border: 1px solid $light-color;
+    border-radius: 5px;
+    box-shadow: 0 0 10px $shadow-color;
+
+    img {
+      max-width: 200px;
+      max-height: 200px;
     }
   }
 }
@@ -296,6 +296,10 @@
         font-size: 1.2rem;
       }
     }
+
+    &__specialist {
+      font-size: 1.4rem;
+    }
   }
 
   &__other {
@@ -350,6 +354,12 @@
   background-color: #08A88A;
   border-radius: 10px;
 
+  &__select-problems {
+    .css--menu {
+      z-index: 1000 !important;
+    }
+  }
+
   &__title {
     color: white;
     font-size: 1.6rem;
@@ -399,8 +409,7 @@
       box-sizing: border-box;
     }
 
-    // Настройка календаря
-    /* Увеличиваем весь календарь */
+
     .large-datepicker .react-datepicker {
       font-size: 16px;
       transform: scale(1.3);
@@ -509,6 +518,10 @@
       padding: 1rem 1.5rem;
       border: 1px solid black;
 
+      p {
+        font-size: 1.25rem;
+      }
+
       h2 {
         text-align: left;
       }
@@ -531,6 +544,10 @@
       border-radius: 10px;
       border: 1px solid black;
       padding: 1rem 2rem;
+
+      p {
+        font-size: 1.25rem;
+      }
     }
   }
 }
@@ -631,6 +648,12 @@
     font-weight: bolder;
     margin-bottom: 2rem;
     padding: 5px;
+  }
+
+  .profile {
+    width: 90%;
+    box-sizing: border-box;
+    margin: 1rem auto;
   }
 }
 
