fix-bags 2 frontend

--- a/frontend/src/pages/auth/FormAuth/FormAuth.scss
+++ b/frontend/src/pages/auth/FormAuth/FormAuth.scss
@@ -51,7 +51,9 @@
         background-color: $button-color-hover;
         cursor: pointer;
       }
+    }
 
+    &.step1{
       &:disabled {
         background-color: #cccccc;
         color: #666666;
