--- a/frontend/src/components/UI/CheckBox/CheckBox.scss
+++ b/frontend/src/components/UI/CheckBox/CheckBox.scss
@@ -3,7 +3,7 @@
 .agreement {
   width: 100%;
   box-sizing: border-box;
-  margin: 20px auto;
+  margin: 0 auto;
 
   &__container {
     display: flex;
