--- a/frontend/src/features/account/UserInfo/UserInfo.scss
+++ b/frontend/src/features/account/UserInfo/UserInfo.scss
@@ -21,4 +21,9 @@
         margin-top: 1rem;
         margin-bottom: 0.8rem;
     }
+
+    .label {
+        font-weight: bold;
+        color: $primary-color;
+    }
 }
