--- a/frontend/src/assets/styles/index.scss
+++ b/frontend/src/assets/styles/index.scss
@@ -1,5 +1,6 @@
-// PersonalAccount.scss
 @use './variables.scss' as *;
+@import './pages.scss';
+@import './normalize.scss';
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 * {
@@ -14,7 +15,7 @@ img {
 }
 
 a {
-    font-weight: bolder;
+    font-weight: bold;
 
     &:hover {
         color: $primary-color;
