--- a/frontend/src/assets/styles/pages/account.scss
+++ b/frontend/src/assets/styles/pages/account.scss
@@ -140,8 +140,8 @@
     box-shadow: 0 0 10px $shadow-color;
 
     img {
-      max-width: 200px;
-      max-height: 200px;
+      width: 130px;
+      height: 130px;
     }
   }
 }
@@ -419,9 +419,24 @@
       font-size: 16px;
       transform: scale(1.3);
       transform-origin: top left;
+      border: none !important;
+      font-family: "Mulish", sans-serif !important;
+
+      &__header {
+        background: $button-gradient;
+      }
+
+      &__current-month {
+        color: white;
+      }
 
       &__month-container {
         width: 100%;
+      }
+
+      &__navigation-icon--next::before,
+      &__navigation-icon--previous:before {
+        border-color: white;
       }
 
       &__day {
@@ -429,6 +444,11 @@
         height: 50px;
         line-height: 50px;
         font-size: 1.2rem;
+
+        &--selected {
+          background: $button-gradient !important;
+          color: #fff !important;
+        }
       }
 
       &__current-month {
@@ -441,6 +461,12 @@
 
       &__day-name {
         width: 50px;
+        font-size: 1.2rem;
+      }
+
+      &__today-button {
+        background: $button-gradient !important;
+        color: white !important;
         font-size: 1.2rem;
       }
     }
@@ -915,6 +941,18 @@
         color: $primary-color;
       }
     }
+  }
+
+  &__row-patient {
+    background-color: rgba(57, 137, 187, 0.407);
+  }
+
+  &__row-admin {
+    background-color: #ac9c245a;
+  }
+
+  &__row-doctor {
+    background-color: #58b8a543;
   }
 
   &__table {
