--- a/frontend/src/assets/styles/variables.scss
+++ b/frontend/src/assets/styles/variables.scss
@@ -28,6 +28,7 @@ $sidebar-color: rgb(242, 242, 250);
 
 $red-color: rgb(186, 16, 16);
 $red-color-hover: rgb(156, 14, 14);
+$red-color-light: rgb(241, 116, 132);
 $button-gradient: linear-gradient(148.98deg, $primary-color 8.51%, $secondary-color 120.39%);
 
 $title-size: 3rem;
