--- a/frontend/src/components/UI/SideBar/SideBar.scss
+++ b/frontend/src/components/UI/SideBar/SideBar.scss
@@ -1,6 +1,7 @@
 @use '../../../assets/styles/variables.scss' as *;
 
 .sidebar {
+  position: fixed;
   box-sizing: border-box;
   margin: 0 1rem;
   padding: 10px 0 10px;
