--- a/frontend/src/features/account/TimeSlots/TimeSlots.scss
+++ b/frontend/src/features/account/TimeSlots/TimeSlots.scss
@@ -6,8 +6,10 @@
   }
 
   &__title {
-    font-weight: 600;
-    margin-bottom: 8px;
+    font-weight: bold;
+    font-size: 1.1rem;
+    margin-bottom: 12px;
+    color: black;
   }
 
   &__list {
@@ -23,7 +25,7 @@
     background-color: #f2f5f9;
     color: #333;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 1.1rem;
     transition: background 0.2s, color 0.2s;
 
     &:hover {
