--- a/frontend/src/assets/styles/index.scss
+++ b/frontend/src/assets/styles/index.scss
@@ -1,6 +1,6 @@
 @use './variables.scss' as *;
-@import './pages.scss';
-@import './normalize.scss';
+@use './pages.scss';
+@use './normalize.scss';
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 * {
