--- a/frontend/src/components/UI/Modals/RecordModal/RecordModal.scss
+++ b/frontend/src/components/UI/Modals/RecordModal/RecordModal.scss
@@ -98,6 +98,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 20px;
+        min-height: 425px;
         margin-bottom: 20px;
     }
 
@@ -131,7 +132,7 @@
             &__multi-value {
                 background-color: $primary-color;
                 border-radius: 4px;
-                
+
                 &__label {
                     color: white;
                 }
@@ -189,40 +190,12 @@
         }
     }
 
-    .large-datepicker .react-datepicker {
-        font-size: 16px;
-        transform: scale(1.3);
+    .react-datepicker {
+        transform: scale(1.6);
         transform-origin: top left;
-        border: none !important;
-        font-family: "Mulish", sans-serif !important;
 
-        &__header {
-            background: $button-gradient;
-        }
-
-        &__current-month {
-            color: white;
-        }
-
-        &__month-container {
-            width: 100%;
-        }
-
-        &__navigation-icon--next::before,
-        &__navigation-icon--previous:before {
-            border-color: white;
-        }
-
-        &__day {
-            width: 50px;
-            height: 50px;
-            line-height: 50px;
-            font-size: 1.2rem;
-
-            &--selected {
-                background: $button-gradient !important;
-                color: #fff !important;
-            }
+        &__day-names {
+            margin-left: 7px;
         }
     }
 }
