--- a/frontend/src/features/account/MyProfile/MyProfile.scss
+++ b/frontend/src/features/account/MyProfile/MyProfile.scss
@@ -34,9 +34,10 @@
   }
 
   &__fio {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-weight: bolder;
     text-align: left;
+    margin-bottom: 20px;
   }
 
   &__role {
@@ -52,6 +53,7 @@
     gap: 0.6rem;
     margin-top: 1rem;
     margin-bottom: 0.8rem;
+    font-size: 1.4rem;
   }
 
   .label {
