--- a/frontend/src/components/UI/Modals/ShiftModal/ShiftModal.scss
+++ b/frontend/src/components/UI/Modals/ShiftModal/ShiftModal.scss
@@ -40,10 +40,10 @@
         gap: 10px;
         align-items: center;
         justify-content: center;
-        margin-bottom: 30px;
+        margin: 35px 0;
 
         p {
-            font-size: 1.3rem;
+            font-size: 1.5rem;
             margin: 0;
         }
     }
