--- a/frontend/src/components/UI/SideBar/SideBar.scss
+++ b/frontend/src/components/UI/SideBar/SideBar.scss
@@ -10,6 +10,7 @@
     a {
       display: block;
     }
+
     padding: 1rem 0;
     margin-bottom: 1rem;
     width: 100%;
@@ -32,28 +33,19 @@
     list-style: none;
     padding: 0;
     margin: 0;
-  }
 
-  &__menu-item {
-    padding: 5px 8px 5px 0;
-    transition: background-color 0.3s;
+    &-item {
+      padding: 5px 8px 5px 0;
+      text-decoration: none;
+      color: black;
+      padding: 10px 15px;
+      font-size: 1.6rem;
+      transition: background-color 0.3s;
 
-    &--active {
-      .sidebar__link{
+      & .active {
         color: black;
         font-weight: bolder;
       }
-    }
-  }
-
-  &__link {
-    text-decoration: none;
-    color: black;
-    padding: 10px 15px;
-    font-size: 1.6rem;
-
-    &:hover {
-      color: $primary-color;
     }
   }
 }
