--- a/frontend/src/features/account/ArchiveConsultations/ArchiveConsultations.scss
+++ b/frontend/src/features/account/ArchiveConsultations/ArchiveConsultations.scss
@@ -32,6 +32,13 @@
     flex-direction: column;
     gap: 1rem;
   }
+
+  &__empty {
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bolder;
+    color: black;
+  }
 }
 
 .archive-consultation-card {
