--- a/frontend/src/features/account/MyProfile/MyProfile.scss
+++ b/frontend/src/features/account/MyProfile/MyProfile.scss
@@ -7,12 +7,27 @@
   border-radius: 8px;
   margin: 0 auto;
   box-sizing: border-box;
+  position: relative;
 
   &__box {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 5px;
+  }
+
+  &__back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    color: black;
+    transition: fill 0.3s ease;
+
+    &:hover {
+      fill: $primary-color;
+      cursor: pointer;
+    }
   }
 
   &__content {
